# argv-c-transformer

./: .gitignore  CMakeLists.txt  README.md  checkComp.sh  clean.sh  example.sh  flake.nix  liveRun.sh  myRun.sh  oneFilter.sh  oneRun.sh  onlineRun.sh  properties.config  run.sh  test.config  testRun.sh  verifier.c
.github/workflows/: buildNTest.yaml
argc-benchmarks/: DrKLO_Telegram_superfasthash.c  DrKLO_Telegram_superfasthash.yml  antirez_redis_endianconv.c  antirez_redis_fastjson.c  antirez_redis_localtime.c  antirez_redis_localtime.yml  antirez_redis_localtime_limited.c  antirez_redis_localtime_limited.yml  antirez_redis_mt19937-64.c  antirez_redis_mt19937-64.yml  antirez_redis_redisassert.c  antirez_redis_strl.c  plexinc_plex-home-theater-public_fstrcmp.c  plexinc_plex-home-theater-public_fstrcmp.yml  plexinc_plex-home-theater-public_getdelim.c  plexinc_plex-home-theater-public_mt19937ar.c  plexinc_plex-home-theater-public_mt19937ar.yml  plexinc_plex-home-theater-public_rand_r.c  scottmwinters_projects_sorts.c  visit-vis_VisIt_dehex.c  visit-vis_VisIt_enhex.c  visit-vis_VisIt_enhex.yml  visit-vis_VisIt_matrix.c
manual/: DrKLO_Telegram_superfasthash.c  DrKLO_Telegram_superfasthash.yml  README.md  antirez_redis_endianconv.yml  antirez_redis_localtime.c  antirez_redis_localtime.yml  antirez_redis_localtime_guarded.c  antirez_redis_localtime_guarded.yml  antirez_redis_redisassert.c  antirez_redis_redisassert.yml  antirez_redis_strl.c  endianconv.c  endianconv.yml  foo.c  foo.yml  fstrcmp.c  localtime.c  localtime.yml  plexinc_plex-home-theater-public_fstrcmp.c  plexinc_plex-home-theater-public_fstrcmp.i  plexinc_plex-home-theater-public_fstrcmp.yml  plexinc_plex-home-theater-public_rand_r.c  plexinc_plex-home-theater-public_rand_r.yml  rand_r.c  rand_r.yml  redisassert.c  redisassert.yml  strl.c  strl.yml  superfasthash.c  superfasthash.yml  triangle2.c  triangle2.yml
manual/practice/: triangle.c  triangle.yml  triangle1.c  triangle1.yml
manual/round1/: DrKLO_Telegram_superfasthash.c  antirez_redis_endianconv.c  antirez_redis_endianconv.yml  antirez_redis_localtime.c  antirez_redis_localtime_guarded.c  antirez_redis_localtime_guarded.yml  antirez_redis_redisassert.c  antirez_redis_redisassert.yml  antirez_redis_strl.c  antirez_redis_strl_real.c  antirez_redis_strl_real.yml  plexinc_plex-home-theater-public_fstrcmp.c  plexinc_plex-home-theater-public_fstrcmp.yml  plexinc_plex-home-theater-public_fstrcmp_real.c  plexinc_plex-home-theater-public_fstrcmp_real.yml  plexinc_plex-home-theater-public_rand_r.c  plexinc_plex-home-theater-public_rand_r.yml
manual/round2/: CheckBigBitfield.c  CheckBigBitfield.yml  TestQnanhibit.c  TestQnanhibit.yml  antirez_redis_fastjson.c  antirez_redis_fastjson.yml  antirez_redis_mt19937-64.c  calcnewt.c  calcnewt.yml  dehex.c  dehex.yml  enhex.c  enhex.yml  fastjson.c  getdelim.c  getdelim.yml  getdelim_mod.c  getdelim_mod.yml  matrix.c  matrix.yml  mt19937-64.c  mt19937-64.yml  mt19937ar.c  mt19937ar.yml  plexinc_plex-home-theater-public_calcnewt.c  plexinc_plex-home-theater-public_calcnewt.yml  plexinc_plex-home-theater-public_getdelim.c  plexinc_plex-home-theater-public_getdelim.yml  plexinc_plex-home-theater-public_getdelim_mod.c  plexinc_plex-home-theater-public_getdelim_mod.yml  plexinc_plex-home-theater-public_mt19937ar.c  plexinc_plex-home-theater-public_mt19937ar.yml  plexinc_plex-home-theater-public_mt19937ar_real.c  plexinc_plex-home-theater-public_mt19937ar_real.yml  scottmwinters_projects_sorts.c  scottmwinters_projects_sorts.yml  sorts.c  sorts.yml  visit-vis_VisIt_CheckBigBitfield.c  visit-vis_VisIt_CheckBigBitfield.yml  (+8 more)
samples/: poly_1024_thresh_3_unsafe.c-amalgamation.c
samples/OG/: og_sample.c
samples/Tester/: 68-longjmp_51-worries_true.c  counts.c  counts2.c  counts3.c  full.c  noMain.c  remove3.c  sample.c
samples/Tester/headerExample/: hasSrc.c  isSrc.c
src/addCode/: Example.cpp
src/download/: Downloader.py  chooseUrls.cpp  gitclone.cpp  main.cpp
src/download/include/: chooseUrls.hpp  gitclone.hpp
src/example/: Action.cpp  ConsumerMatcher.cpp  ConsumerVisitor.cpp  Example.cpp  Handler.cpp  Main.cpp  RemoveNodeConsumer.cpp  RemoveNodeHandler.cpp  Visitor.cpp
src/example/include/: Action.hpp  ConsumerMatcher.hpp  ConsumerVisitor.hpp  Example.hpp  Handler.hpp  RemoveNodeConsumer.hpp  RemoveNodeHandler.hpp  Visitor.hpp
src/filter/: AddVerifiersConsumerFilter.cpp  AddVerifiersVisitorFilter.cpp  CountingConsumer.cpp  CountingVisitor.cpp  Filter.cpp  FilterAction.cpp  FilterFunctionsConsumer.cpp  Filterer.cpp  FrontendFactoryWithArgs.cpp  ReGenCode.cpp  Remove.cpp  RemoveConsumer.cpp  RemoveVisitor.cpp  main.cpp  pretty_print_visitor.cpp
src/filter/include/: AddVerifiersConsumerFilter.hpp  AddVerifiersVisitorFilter.hpp  CountingConsumer.hpp  CountingVisitor.hpp  Filter.h  FilterAction.hpp  FilterFunctionsConsumer.hpp  Filterer.hpp  FrontendFactoryWithArgs.hpp  ReGenCode.h  Remove.h  Remove.hpp  RemoveConsumer.hpp  RemoveVisitor.hpp
src/full/: main.cpp
src/transform/: AddMainVisitor.cpp  AddVerifiersConsumer.cpp  AddVerifiersVisitor.cpp  AllFunctionsToCallHandler.cpp  ArgsFrontendActionFactory.cpp  ConsumerFindInclude.cpp  CreateNewAST.cpp  CreateVerifiersVisitor.cpp  GenerateCodeConsumer.cpp  GenerateIncludeAction.cpp  GenerateIncludeConsumer.cpp  GenerateIncludeHandler.cpp  HandlerFindInclude.cpp  IfRewrite.cpp  IsThereMainConsumer.cpp  IsThereMainHandler.cpp  MyRewrite.cpp  ReGenCode.cpp  RegenCode.cpp  RemoveUnusedVisitor.cpp  ReplaceCallsVisitor.cpp  ReplaceDeadCallsConsumer.cpp  ReplaceDeadCallsVisitor.cpp  Transform.cpp  TransformAction.cpp  Transformer.cpp  create_ast.cpp  experiment.cpp  main.cpp  pretty_print_visitor.cpp  srcCodeGenerator.cpp
src/transform/include/: AddMainVisitor.hpp  AddVerifiersConsumer.hpp  AddVerifiersVisitor.hpp  AllFunctionsToCallHandler.hpp  ArgsFrontendActionFactory.hpp  ConsumerFindInclude.hpp  CreateNewAST.hpp  CreateVerifiersVisitor.hpp  GenerateCodeConsumer.hpp  GenerateIncludeAction.hpp  GenerateIncludeConsumer.hpp  GenerateIncludeHandler.hpp  HandlerFindInclude.hpp  (+17 more)
(+1 files in other folders)
